# pef-moderation

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.firehose_client  README.md  spdlogConfig.cmake
.github/workflows/: build-and-push-ghcr-firehose-client.yaml  build-and-push-ghcr.yaml
config/: postgresql.conf
db-crawler/: CMakeLists.txt
db-crawler/cmake/: db_crawler_config.hpp.in
db-crawler/config/: crawler_dev.yml
db-crawler/config/acknowledge_queries/: nsfw_block_list.sql  youtube_disinfo_import.sql
db-crawler/include/: metrics.hpp
db-crawler/source/: main.cpp  metrics.cpp
firehose-client/: CMakeLists.txt  CMakePresets.json  Dockerfile  HOSTING.md  compose.yaml  datasource.cpp  datasource.hpp  main.cpp  matcher.cpp  matcher.hpp
firehose-client/cmake/: firehost_client_config.hpp.in
firehose-client/config/: blacklist_accounts.sql  full_config.yml  graph_db_config_dev.yml  ignored_accounts.sql  labeler-service.json  live_config.yml  live_filters  live_filters.csv  match_filters_202503010956.json  match_filters_202504220733.json  match_filters_202509020751.json  promtail.yaml  whitelist_accounts.sql
firehose-client/include/: config.hpp  content_handler.hpp  controller.hpp  datasource.hpp  helpers.hpp  log_wrapper.hpp  matcher.hpp  metrics.hpp  parser.hpp  payload.hpp  post_processor.hpp
firehose-client/include/activity/: account_events.hpp  event_cache.hpp  event_recorder.hpp  rate_observer.hpp
firehose-client/include/moderation/: action_router.hpp  auxiliary_data.hpp  embed_checker.hpp  list_manager.hpp  ozone_adapter.hpp  report_agent.hpp  session_manager.hpp
firehose-client/include/queue/: atomicops.h  readerwritercircularbuffer.h
firehose-client/source/: config.cpp  content_handler.cpp  datasource.cpp  helpers.cpp  log_wrapper.cpp  main.cpp  matcher.cpp  metrics.cpp  parser.cpp  payload.cpp  post_processor.cpp
firehose-client/source/activity/: account_events.cpp  event_cache.cpp  event_recorder.cpp
firehose-client/source/moderation/: action_router.cpp  auxiliary_data.cpp  embed_checker.cpp  list_manager.cpp  ozone_adapter.cpp  report_agent.cpp  session_manager.cpp
firehose-client/test/: CMakeLists.txt  filter_test.cpp
firehose-client/test/data/: abusive_profile.json  failure.json  filters  post.json  profile.json  raw_firehose_commit.json  sample_account_report  sample_post_report
firehose-client/test/include/: testdefs.hpp
firehose-client/test/source/: cid_test.cpp  json_test.cpp  matcher_test.cpp  parser_test.cpp  rate_observer_test.cpp
grafana/: HOSTING.md  compose.yaml
include/common/: config.hpp  controller.hpp  helpers.hpp  log_wrapper.hpp  metrics_factory.hpp  parser.hpp  rest_utils.hpp
include/common/activity/: account_events.hpp  event_cache.hpp  event_recorder.hpp  neo4j_adapter.hpp  rate_observer.hpp
include/common/bluesky/: async_loader.hpp  client.hpp  platform.hpp
include/common/moderation/: list_manager.hpp  ozone_adapter.hpp  report_agent.hpp  session_manager.hpp
labeler-update/: CMakeLists.txt
labeler-update/cmake/: labeler_update_config.hpp.in
labeler-update/config/: labeler_update_example.yml
labeler-update/include/: metrics.hpp
labeler-update/source/: main.cpp  metrics.cpp
loki/: HOSTING.md  compose.yaml
repo-reader/: CMakeLists.txt
repo-reader/cmake/: repo_reader_config.hpp.in
repo-reader/source/: main.cpp
source/common/: CMakeLists.txt  config.cpp  helpers.cpp  log_wrapper.cpp  metrics_factory.cpp  parser.cpp  rest_utils.cpp
source/common/activity/: account_events.cpp  event_cache.cpp  event_recorder.cpp  neo4j_adapter.cpp
source/common/bluesky/: async_loader.cpp  client.cpp
source/common/moderation/: list_manager.cpp  ozone_adapter.cpp  report_agent.cpp  session_manager.cpp
